- Remove call to get_the_content($snippet_post->ID) and replace with $snippet_post->post_content to prevent notices in admin screen.
- Add logic to detect a fresh plugin install (no version set in options, no snippets set in options). Set version number to current CFSP_VERSION and bypasses any upgrade actions.
- Add permissions detection to Ajax calls and in other places

## 3.2.3
- Updated the upgrade routine to be more robust.

## 3.2.2
- Updated to remove ability to rename snippets.

## 3.2.1
- add 'cf_snippets_admin_permission' filter to allow different capabilities to manage snippets
- default permission is 'manage_options'

## 3.2
- Updated post snippet management
- Removed "post_parent" snippet association to specific posts
- Updated snippets to not store content as meta, now stores as post content.

## 3.1.6
- Hotfix to set global $post object, since setup_postdata does not do so.

## 3.1.5
- Hotfix to properly reset all postdata. Removed all calls in snippets class to wp_reset_query.

## 3.1.4
- Hotfix to preserve authordata

## 3.1.3
- Hotfix to address blowing away subqueries through improper wp_reset_query call.

## 3.1.2
- Hotfix to address introduced bug in CF Snippets admin display discovered from changes in 3.1.1

## 3.1.1
- Hotfix to remove custom post loop in admin that is generated by the snippets module for Carrington Build.

## 3.1

- Adding upgrade routine to plugin.  Prompts admins to upgrade by clicking a link in an admin notice.

## 3.0

- Implementing Snippets as a Custom Post Type [_cf_snippet]
- Extracting as much data into views as possible
- Cleanup of CSS/JS
- Cleanup of Old code to lighten load

## 2.1.6

- Adding `esc_textarea` to the Edit box to escape textarea content properly.

## 2.1.5

- Fixing issue with Post Screen Meta Box processing shortcodes instead of displaying them
- Fixing issue with saving of Post Snippets

## 2.1.4

- Fixing issue with Post Screen Meta Box not showing Post Related Snippets

## 2.1.3
